--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea/
 
+pnpm-lock.yaml
+
 # dependencies
 /node_modules
 /.pnp
