--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.8.9"
+    "vaul": "^0.8.9",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
